fix: aligned prices to the right, working

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -77,6 +77,8 @@ h3 {
 
 .speisen__item {
 	padding-bottom: 3rem;
+	display: flex;
+	flex-direction: column;
 }
 
 .head__section {
@@ -89,14 +91,14 @@ h3 {
 }
 
 .desc {
-	font-size: 0.8rem;
+	font-size: 1rem;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.4;
 	color: #333;
 }
 
 .speisen__subhead {
-	font-size: 0.8rem;
+	font-size: 1.2rem;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
 	color: #333;
@@ -111,6 +113,8 @@ h3 {
 	display: inline-block;
 	padding: 0.5rem;
 	border-radius: 8px;
+	margin-top: 0.8rem;
+	align-self: flex-end;
 }
 
 .back {
