--- a/src/components/Buttons/BackButton/BackButton.css
+++ b/src/components/Buttons/BackButton/BackButton.css
@@ -1,7 +1,7 @@
 .back__btn {
 	font-size: 1.2rem;
 	font-family: "Oswald";
-	color: grey;
-	background-color: rgb(211, 211, 211);
-	padding: 0.3rem 0 0.5rem 1rem;
+	color: #666;
+	background-color: orange;
+	padding: 1rem 0 1rem 1rem;
 }
